--- a/project_1.ipynb
+++ b/project_1.ipynb
@@ -2,10 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\"\"\"\n",
+    "Hameed Abdul\n",
+    "10/3/2018\n",
+    "Artificial neural networks\n",
+    "Homework 1 - Weather station data\n",
+    "\"\"\"\n",
+    "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "from pathlib import Path\n",
@@ -14,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,120 +87,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Reading 2017-2.csv ... \n",
-      "Entries for StationID: 330\n",
-      "==============================\n",
-      "Contains 35040 entries\n",
-      "\n",
-      "\n",
-      "Entries for StationID: 340\n",
-      "==============================\n",
-      "Contains 35040 entries\n",
-      "\n",
-      "\n",
-      "Entries for StationID: 350\n",
-      "==============================\n",
-      "Contains 35039 entries\n",
-      "\n",
-      "\n",
-      "Entries for StationID: 360\n",
-      "==============================\n",
-      "Contains 35040 entries\n",
-      "\n",
-      "\n",
-      "Entries for StationID: 371\n",
-      "==============================\n",
-      "Contains 35040 entries\n",
-      "\n",
-      "\n",
-      "Entries for StationID: 380\n",
-      "==============================\n",
-      "Contains 34744 entries\n",
-      "\n",
-      "\n",
-      "Entries for StationID: 390\n",
-      "==============================\n",
-      "Contains 34990 entries\n",
-      "\n",
-      "\n",
-      "Entries for StationID: 405\n",
-      "==============================\n",
-      "Contains 35039 entries\n",
-      "\n",
-      "\n",
-      "Entries for StationID: 410\n",
-      "==============================\n",
-      "Contains 35040 entries\n",
-      "\n",
-      "\n",
-      "Entries for StationID: 420\n",
-      "==============================\n",
-      "Contains 34814 entries\n",
-      "\n",
-      "\n",
-      "Entries for StationID: 425\n",
-      "==============================\n",
-      "Contains 35040 entries\n",
-      "\n",
-      "\n",
-      "Entries for StationID: 435\n",
-      "==============================\n",
-      "Contains 35038 entries\n",
-      "\n",
-      "\n",
-      "Entries for StationID: 440\n",
-      "==============================\n",
-      "Contains 35040 entries\n",
-      "\n",
-      "\n",
-      "Entries for StationID: 450\n",
-      "==============================\n",
-      "Contains 35040 entries\n",
-      "\n",
-      "\n",
-      "Entries for StationID: 455\n",
-      "==============================\n",
-      "Contains 34985 entries\n",
-      "\n",
-      "\n",
-      "Entries for StationID: 460\n",
-      "==============================\n",
-      "Contains 35040 entries\n",
-      "\n",
-      "\n",
-      "Entries for StationID: 470\n",
-      "==============================\n",
-      "Contains 35032 entries\n",
-      "\n",
-      "\n",
-      "Entries for StationID: 480\n",
-      "==============================\n",
-      "Contains 31685 entries\n",
-      "\n",
-      "\n",
-      "Entries for StationID: 490\n",
-      "==============================\n",
-      "Contains 35039 entries\n",
-      "\n",
-      "\n",
-      "Successfully Separated all Stations into individual CSVs\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "generate_site_files(\"2017-2.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,131 +254,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Reading data from 2017-410.csv ....\n",
-      "This file does not have a Month Index. Creating one for monthly report\n",
-      "Using Timestamp to map entry to appriopraite month....\n",
-      "\n",
-      "\n",
-      "\n",
-      "Station 410 Stats for Feb 2017\n",
-      "========================================\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>temp_soil_10cm_C</th>\n",
-       "      <th>temp_air_60cm_C</th>\n",
-       "      <th>temp_air_2m_C</th>\n",
-       "      <th>temp_air_10m_C</th>\n",
-       "      <th>rh_2m_pct</th>\n",
-       "      <th>temp_dp_2m_C</th>\n",
-       "      <th>rain_2m_inches</th>\n",
-       "      <th>wind_speed_10m_mph</th>\n",
-       "      <th>wind_direction_10m_deg</th>\n",
-       "      <th>rfd_2m_wm2</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>Max</th>\n",
-       "      <td>23.050000</td>\n",
-       "      <td>31.100000</td>\n",
-       "      <td>29.940000</td>\n",
-       "      <td>29.680000</td>\n",
-       "      <td>100.000000</td>\n",
-       "      <td>23.340000</td>\n",
-       "      <td>0.328000</td>\n",
-       "      <td>23.856000</td>\n",
-       "      <td>360.000000</td>\n",
-       "      <td>942.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Mean</th>\n",
-       "      <td>21.177883</td>\n",
-       "      <td>19.979714</td>\n",
-       "      <td>19.520402</td>\n",
-       "      <td>20.466228</td>\n",
-       "      <td>83.940283</td>\n",
-       "      <td>16.305208</td>\n",
-       "      <td>0.000288</td>\n",
-       "      <td>6.140153</td>\n",
-       "      <td>162.029472</td>\n",
-       "      <td>182.848311</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Min</th>\n",
-       "      <td>17.230000</td>\n",
-       "      <td>6.359000</td>\n",
-       "      <td>7.080000</td>\n",
-       "      <td>10.020000</td>\n",
-       "      <td>42.840000</td>\n",
-       "      <td>6.730000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.283000</td>\n",
-       "      <td>0.001000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      temp_soil_10cm_C  temp_air_60cm_C  temp_air_2m_C  temp_air_10m_C  \\\n",
-       "Max          23.050000        31.100000      29.940000       29.680000   \n",
-       "Mean         21.177883        19.979714      19.520402       20.466228   \n",
-       "Min          17.230000         6.359000       7.080000       10.020000   \n",
-       "\n",
-       "       rh_2m_pct  temp_dp_2m_C  rain_2m_inches  wind_speed_10m_mph  \\\n",
-       "Max   100.000000     23.340000        0.328000           23.856000   \n",
-       "Mean   83.940283     16.305208        0.000288            6.140153   \n",
-       "Min    42.840000      6.730000        0.000000            0.283000   \n",
-       "\n",
-       "      wind_direction_10m_deg  rfd_2m_wm2  \n",
-       "Max               360.000000  942.000000  \n",
-       "Mean              162.029472  182.848311  \n",
-       "Min                 0.001000    0.000000  "
-      ]
-     },
-     "execution_count": 56,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "stations_stats_by_month(\"2017-410.csv\", 2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -501,21 +291,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Station 410\n",
-      "===============\n",
-      "Max: 1172.0\n",
-      "Mean: 199.40083025114157\n",
-      "Min: 0.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "solar_rad_stats_station410()"
    ]
@@ -537,7 +315,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
